Table users {
id bigint [pk, increment]
name varchar
email varchar [unique]
password varchar
phone varchar
otp varchar
avatar_url varchar
email_verified_at timestamp
is_active boolean
created_at timestamp
updated_at timestamp
}

Table roles {
id bigint [pk, increment]
name varchar [unique]
}

Table user_roles {
id bigint [pk, increment]
user_id bigint
role_id bigint
}

Table refresh_tokens {
id bigint [pk, increment]
token varchar [unique]
user_id bigint
expires_at timestamp
revoked boolean
created_at timestamp
}

Table projects {
id bigint [pk, increment]
title varchar
sub_title varchar
slug varchar [unique]
description text
content text
demo_url varchar
repository_url varchar
thumbnail_url varchar
published_at timestamp
created_at timestamp
updated_at timestamp
}

Table project_images {
id bigint [pk, increment]
project_id bigint
image_url varchar
}

Table project_skills {
id varchar [pk]
project_id bigint
skill_id bigint
}

Table project_categories {
id varchar [pk]
project_id bigint
category_id bigint
}

Table blog_posts {
id bigint [pk, increment]
title varchar
slug varchar [unique]
excerpt text
content text
thumbnail_url varchar
image_url varchar
author_id bigint
status varchar
published_at timestamp
created_at timestamp
updated_at timestamp
}

Table categories {
id bigint [pk, increment]
name varchar
slug varchar [unique]
type varchar [note: "BLOG_POST, PROJECT or SKILL, default BLOG_POST"]
}

Table blog_post_categories {
id varchar [pk]
post_id bigint
category_id bigint
}

Table tags {
id bigint [pk, increment]
name varchar
slug varchar [unique]
}

Table blog_post_tags {
id varchar [pk]
post_id bigint
tag_id bigint
}

Table skills {
id bigint [pk, increment]
name varchar
category_id bigint
level int
icon_url varchar
sort_order int
}

Table media {
id varchar [pk]
file_name varchar
file_path varchar
mime_type varchar
size int
created_at timestamp
}

Table settings {
id bigint [pk, increment]
key varchar [unique]
value text
}

Table experiences {
id bigint [pk, increment]
title varchar
company varchar
employment_type varchar [note: "FULL_TIME, PART_TIME, CONTRACT, FREELANCE, or INTERNSHIP"]
description text
start_date date
end_date date
sort_order int
created_at timestamp
updated_at timestamp
}

Table experience_skills {
id varchar [pk]
experience_id bigint
skill_id bigint
}

Table educations {
id bigint [pk, increment]
degree varchar
institution varchar
start_year int
end_year int
sort_order int
created_at timestamp
updated_at timestamp
}

Table career_impacts {
id bigint [pk, increment]
title varchar
description text
quote varchar
icon_url varchar
sort_order int
created_at timestamp
updated_at timestamp
}

Ref: user_roles.user_id > users.id
Ref: user_roles.role_id > roles.id
Ref: refresh_tokens.user_id > users.id

Ref: blog_posts.author_id > users.id

Ref: project_images.project_id > projects.id
Ref: project_skills.project_id > projects.id
Ref: project_skills.skill_id > skills.id
Ref: project_categories.project_id > projects.id
Ref: project_categories.category_id > categories.id

Ref: blog_post_categories.post_id > blog_posts.id
Ref: blog_post_categories.category_id > categories.id

Ref: blog_post_tags.post_id > blog_posts.id
Ref: blog_post_tags.tag_id > tags.id

Ref: skills.category_id > categories.id

Ref: experience_skills.experience_id > experiences.id
Ref: experience_skills.skill_id > skills.id
